<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/edubg"
    android:contentDescription="@string/python"
    tools:context="navFragment.VideoFragment">

    <!-- TODO: Update blank fragment layout -->

    <TextView
        android:id="@+id/textView"
        android:layout_width="181dp"
        android:layout_height="75dp"
        android:layout_marginTop="32dp"
        android:gravity="center"
        android:padding="10sp"
        android:text="@string/video"
        android:textColor="@color/black"
        android:textSize="40sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="148dp"
        android:layout_height="130dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="44dp"
        android:contentDescription="@string/android"
        android:src="@drawable/android"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView"
        app:srcCompat="@drawable/android" />

    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="151dp"
        android:layout_height="132dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="40dp"
        android:contentDescription="@string/python"
        android:src="@drawable/python"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView4" />

    <Button
        android:id="@+id/javaButton"
        android:layout_width="186dp"
        android:layout_height="48dp"
        android:layout_marginTop="132dp"
        android:text="@string/watch_video"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/imageView"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        android:backgroundTint="@color/red_orange"/>

    <Button
        android:id="@+id/androidButton"
        android:layout_width="186dp"
        android:layout_height="48dp"
        android:layout_marginTop="124dp"
        android:text="@string/watch_video"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.594"
        app:layout_constraintStart_toEndOf="@+id/imageView4"
        app:layout_constraintTop_toBottomOf="@+id/javaButton"
        android:backgroundTint="@color/red_orange"
        />

    <Button
        android:id="@+id/pythonButton"
        android:layout_width="186dp"
        android:layout_height="48dp"
        android:layout_marginTop="124dp"
        android:text="@string/watch_video"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.558"
        app:layout_constraintStart_toEndOf="@+id/imageView5"
        app:layout_constraintTop_toBottomOf="@+id/androidButton"
        android:backgroundTint="@color/red_orange"
        />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="148dp"
        android:layout_height="126dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="52dp"
        android:contentDescription="@string/java"
        android:src="@drawable/java"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="72dp"
        android:layout_marginBottom="20dp"
        android:text="Java"
        android:textColor="@color/black"

        android:textSize="32sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/javaButton"
        app:layout_constraintEnd_toEndOf="@+id/javaButton"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintStart_toStartOf="@+id/javaButton"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:text="Android"
        android:textColor="@color/black"

        android:textSize="32sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/androidButton"
        app:layout_constraintEnd_toEndOf="@+id/androidButton"
        app:layout_constraintHorizontal_bias="0.466"
        app:layout_constraintStart_toStartOf="@+id/androidButton"
        app:layout_constraintTop_toBottomOf="@+id/javaButton"
        app:layout_constraintVertical_bias="0.839" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:text="Python"
        android:textColor="@color/black"
        android:textSize="32sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/pythonButton"
        app:layout_constraintEnd_toEndOf="@+id/pythonButton"
        app:layout_constraintHorizontal_bias="0.466"
        app:layout_constraintStart_toStartOf="@+id/pythonButton"
        app:layout_constraintTop_toBottomOf="@+id/androidButton"
        app:layout_constraintVertical_bias="0.804" />


</androidx.constraintlayout.widget.ConstraintLayout>